force-app/main/default/objects/Procurement_Sub_Category__c/Procurement_Sub_Category__c.object-meta.xml
<CustomObject>
    <description>Junction object to show related subcategories to a procurement</description>
    <label>Procurement Sub Category</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procurement Sub Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>