force-app/main/default/objects/Procurement_Sub_Category__c/fields/CAS_P_Master_Category__c.field-meta.xml
<CustomField>
    <fullName>CAS_P_Master_Category__c</fullName>
    <formula>CAS_P_Sub_Category__r.Parent__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAS-P Master Category</label>
    <type>Text</type>
</CustomField>