force-app/main/default/objects/Procurement_Sub_Category__c/fields/CAS_P_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>CAS_P_Sub_Category__c</fullName>
    <label>CAS-P Sub Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Category__c.CategoryType__c</field>
            <operation>equals</operation>
            <value>CAS Sub Category</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Procurement Sub Categories</relationshipLabel>
    <relationshipName>Procurement_Sub_Categories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>