force-app/main/default/objects/Procurement_Sub_Category__c/fields/Procurement__c.field-meta.xml
<CustomField>
    <fullName>Procurement__c</fullName>
    <label>Procurement</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Procurement Sub Categories</relationshipLabel>
    <relationshipName>Procurement_Sub_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>